Readd prioritization to qaoa_mincost_sat.ipynb

--- a/configproblem/qaoa/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_sat.ipynb
@@ -453,7 +453,7 @@
     "x1, x2, x3, x4, x5, x6 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6')\n",
     "\n",
     "# SAT Penalty\n",
-    "alpha_sat = 1000 # 1e6\n",
+    "alpha_sat = 500 # 1e6\n",
     "\n",
     "# SAT QUBO\n",
     "sat_model = alpha_sat * (2 - x1 - x2 - x3 - x4 + x5 + x1 * x2 + 2 * x3 * x4 - x5 * x6)\n",
@@ -640,6 +640,81 @@
     "\n",
     "plot_counts_histogram(counts, best_config, valid_configs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Visualize results using the StatevectorSimulator\n",
+    "from qaoa_application import apply_qaoa_statevector\n",
+    "import numpy as np\n",
+    "\n",
+    "probabilities, _ = apply_qaoa_statevector(hamiltonian, layers, n_features, theta, warmstart_statevector, use_optimizer, print_res=False)\n",
+    "probabilities_dict = {}\n",
+    "for i in range(0, 2 ** 6):\n",
+    "    probabilities_dict[(np.binary_repr(i, width=6))] = round(probabilities[i], 4)\n",
+    "\n",
+    "plot_counts_histogram(probabilities_dict, best_config, valid_configs)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# prioritization of features\n",
+    "from sympy.utilities.misc import ordinal\n",
+    "import operator\n",
+    "\n",
+    "print_debug_output = True\n",
+    "\n",
+    "# Config cost for each valid config\n",
+    "config_cost = {\"000110\":  45, \"100110\":  55, \"000101\":  55, \"110110\":  65, \"100101\":  65, \"001010\":  70,\n",
+    "               \"110101\":  75, \"000111\":  75, \"001001\":  80, \"101010\":  80, \"111010\":  90, \"101001\":  90,\n",
+    "               \"100111\":  95, \"110111\":  95, \"001011\": 100, \"111001\": 100, \"101011\": 110, \"111011\": 120}\n",
+    "\n",
+    "# Sort counts by value -> prioritized list of configs\n",
+    "sorted_by_value_counts = dict(sorted(counts.items(), key=operator.itemgetter(1),reverse=True))\n",
+    "\n",
+    "average_difference = 0\n",
+    "optimal_value_index = 0\n",
+    "\n",
+    "# Evaluate prioritization results\n",
+    "for i, config in enumerate(sorted_by_value_counts):\n",
+    "    if config in config_cost:\n",
+    "        value = config_cost[config]\n",
+    "        optimal_value = list(config_cost.values())[optimal_value_index]\n",
+    "        optimal_value_index += 1\n",
+    "        counts_index, optimal_index = 0, 0\n",
+    "\n",
+    "        config_cost_copy = config_cost.copy()\n",
+    "        while value in config_cost_copy.values():\n",
+    "            counts_index = list(config_cost_copy.values()).index(value)\n",
+    "            config_to_pop = list(config_cost_copy.keys())[list(config_cost_copy.values()).index(value)]\n",
+    "            config_cost_copy.pop(config_to_pop)\n",
+    "\n",
+    "        config_cost_copy = config_cost.copy()\n",
+    "        while optimal_value in config_cost_copy.values():\n",
+    "            optimal_index = list(config_cost_copy.values()).index(optimal_value)\n",
+    "            config_to_pop = list(config_cost_copy.keys())[list(config_cost_copy.values()).index(optimal_value)]\n",
+    "            config_cost_copy.pop(config_to_pop)\n",
+    "        average_difference += abs(counts_index - optimal_index)\n",
+    "\n",
+    "        if print_debug_output:\n",
+    "            print(\"Valid config \" + str(config) + \" with cost: \" + str(config_cost[config]))\n",
+    "            print(ordinal(counts_index + 1) + \" best config\")\n",
+    "    else:\n",
+    "        if print_debug_output:\n",
+    "            print(\"Invalid config \" + str(config))\n",
+    "print(\"Average difference: \" + str(average_difference/len(config_cost)))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
