Add cell for statevector simulation to qaoa_mincost_k_sat notebook

--- a/configproblem/qaoa/qaoa_mincost_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_sat.ipynb
@@ -651,9 +651,9 @@
     "from qaoa_application import apply_qaoa_statevector\n",
     "import numpy as np\n",
     "\n",
-    "probabilities, _ = apply_qaoa_statevector(hamiltonian, layers, n_features, theta, warmstart_statevector, use_optimizer, print_res=False)\n",
+    "probabilities, _ = apply_qaoa_statevector(problem_circuit, hamiltonian, layers, n_features, theta, warmstart_statevector, use_optimizer, print_res=False)\n",
     "probabilities_dict = {}\n",
-    "for i in range(0, 2 ** 6):\n",
+    "for i in range(0, 2 ** n_features):\n",
     "    probabilities_dict[(np.binary_repr(i, width=6))] = round(probabilities[i], 4)\n",
     "\n",
     "plot_counts_histogram(probabilities_dict, best_config, valid_configs)"
