--- a/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
@@ -198,7 +198,7 @@
     "x1, x2, x3, x4, x5, x6 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6')\n",
     "\n",
     "# SAT Penalty\n",
-    "alpha_sat = 500 # 1e6\n",
+    "alpha_sat = 100 # 1e6\n",
     "\n",
     "# SAT HOBO\n",
     "sat_model = alpha_sat * (1 - x1 - x2 + x3 + x1*x2 - x2*x3 - x3*x4 + x5*x6 + x2*x3*x4 - x3*x5*x6)\n",
@@ -213,6 +213,26 @@
     "print(\"Ising Combined Model: \")\n",
     "combined_hamiltonian = combined_model.to_puso()\n",
     "pprint(combined_hamiltonian)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# from configproblem.util.visualization import plot_beta_gamma_cost_landscape, plot_f_mu_cost_landscape\n",
+    "# # Plot cost landscape for different values of beta and gamma\n",
+    "# hamiltonians = [{'hamiltonian': sat_model.to_puso(), 'name': 'SAT'},\n",
+    "#                 {'hamiltonian': cost_model.to_puso(), 'name': 'COST'},\n",
+    "#                 {'hamiltonian': combined_hamiltonian, 'name': 'COMBINED'}]\n",
+    "# strategies = ['min', 'avg', 'top']\n",
+    "# plot_beta_gamma_cost_landscape(problem_circuit, hamiltonians, strategies, 6, 0.2)\n",
+    "#\n",
+    "# # Plot cost landscape for different f and mu\n",
+    "# plot_f_mu_cost_landscape(combined_hamiltonian, 6)"
    ],
    "metadata": {
     "collapsed": false
@@ -254,6 +274,26 @@
     "\n",
     "plot_counts_histogram(counts, best_config, valid_configs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Visualize results using the StatevectorSimulator\n",
+    "from qaoa_application import apply_qaoa_statevector\n",
+    "import numpy as np\n",
+    "\n",
+    "probabilities, _ = apply_qaoa_statevector(problem_circuit, hamiltonian, layers, n_features, theta, warmstart_statevector, use_optimizer, print_res=False)\n",
+    "probabilities_dict = {}\n",
+    "for i in range(0, 2 ** n_features):\n",
+    "    probabilities_dict[(np.binary_repr(i, width=6))] = round(probabilities[i], 4)\n",
+    "\n",
+    "plot_counts_histogram(probabilities_dict, best_config, valid_configs)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
