--- a/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
@@ -192,6 +192,7 @@
    "outputs": [],
    "source": [
     "# cost and sat individually\n",
+    "from configproblem.util.model_transformation import convert_to_penalty\n",
     "from qubovert import boolean_var\n",
     "\n",
     "# define binary vars\n",
@@ -200,8 +201,12 @@
     "# SAT Penalty\n",
     "alpha_sat = 100 # 1e6\n",
     "\n",
+    "sat_instance = [[(x1, True), (x2, True)],\n",
+    "              [(x2, True), (x3, False), (x4, True)],\n",
+    "              [(x3, True), (x5, False), (x6, False)]]\n",
+    "\n",
     "# SAT HOBO\n",
-    "sat_model = alpha_sat * (1 - x1 - x2 + x3 + x1*x2 - x2*x3 - x3*x4 + x5*x6 + x2*x3*x4 - x3*x5*x6)\n",
+    "sat_model = alpha_sat * convert_to_penalty(sat_instance)\n",
     "\n",
     "# Cost HOBO\n",
     "cost_model = 30*x1 + 20*x2 + 25*x3 + 50*x4 + 10*x5 + 10*x6\n",
@@ -224,14 +229,14 @@
    "outputs": [],
    "source": [
     "# from configproblem.util.visualization import plot_beta_gamma_cost_landscape, plot_f_mu_cost_landscape\n",
-    "# # Plot cost landscape for different values of beta and gamma\n",
+    "# Plot cost landscape for different values of beta and gamma\n",
     "# hamiltonians = [{'hamiltonian': sat_model.to_puso(), 'name': 'SAT'},\n",
-    "#                 {'hamiltonian': cost_model.to_puso(), 'name': 'COST'},\n",
-    "#                 {'hamiltonian': combined_hamiltonian, 'name': 'COMBINED'}]\n",
+    "#                {'hamiltonian': cost_model.to_puso(), 'name': 'COST'},\n",
+    "#                {'hamiltonian': combined_hamiltonian, 'name': 'COMBINED'}]\n",
     "# strategies = ['min', 'avg', 'top']\n",
     "# plot_beta_gamma_cost_landscape(problem_circuit, hamiltonians, strategies, 6, 0.2)\n",
     "#\n",
-    "# # Plot cost landscape for different f and mu\n",
+    "# Plot cost landscape for different f and mu\n",
     "# plot_f_mu_cost_landscape(combined_hamiltonian, 6)"
    ],
    "metadata": {
