Add prioritization using HOBOs

--- a/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Solving a mincost k-SAT problem using QAOA\n",
     "\n",
@@ -27,7 +26,10 @@
     "| $x_4$   | 50         |\n",
     "| $x_5$   | 10         |\n",
     "| $x_6$   | 10         |"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -295,6 +297,29 @@
     "    probabilities_dict[(np.binary_repr(i, width=6))] = round(probabilities[i], 4)\n",
     "\n",
     "plot_counts_histogram(probabilities_dict, best_config, valid_configs)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from configproblem.qaoa.qaoa_mincost_k_sat import exclude_config\n",
+    "\n",
+    "list_length = 3\n",
+    "\n",
+    "prioritized_list = []\n",
+    "current_hamiltonian = hamiltonian\n",
+    "for i in range(list_length):\n",
+    "    counts, _ = apply_qaoa(problem_circuit, current_hamiltonian, print_res=False)\n",
+    "    current_config = max(counts, key=counts.get)\n",
+    "    current_hamiltonian = exclude_config(current_hamiltonian, current_config, alpha_sat)\n",
+    "    prioritized_list.append(current_config)\n",
+    "\n",
+    "print(prioritized_list)"
    ],
    "metadata": {
     "collapsed": false
