--- a/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Solving a mincost k-SAT problem using QAOA\n",
     "\n",
@@ -26,10 +27,7 @@
     "| $x_4$   | 50         |\n",
     "| $x_5$   | 10         |\n",
     "| $x_6$   | 10         |"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -51,7 +49,7 @@
     "\n",
     "We first apply the quadratic penalty to $(x_i \\vee x_j)$.\n",
     "The resulting penalty can be seen as a new variable $x_{ij}$ that is 0 exactly when $(x_i \\vee x_j)$ is fulfilled and 1 otherwise, meaning $x_{ij} = \\neg(x_i \\vee x_j)$\n",
-    "Using that, we can define the boolean funktion as\n",
+    "Using that, we can define the boolean function as\n",
     "\n",
     "$$(x_i \\vee x_j \\vee x_k) = (x_k \\vee \\neg x_{ij})$$\n",
     "\n",
@@ -147,6 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Hamiltonians may be described as a dict of tuples describing acting qubits and a value for each clause\n",
@@ -163,10 +162,7 @@
     "    (1, 2, 3): -0.125,\n",
     "    (2, 4, 5): 0.125\n",
     "}"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -191,6 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# cost and sat individually\n",
@@ -201,49 +198,44 @@
     "x1, x2, x3, x4, x5, x6 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6')\n",
     "\n",
     "# SAT Penalty\n",
-    "alpha_sat = 100 # 1e6\n",
+    "alpha_sat = 1000 # 1e6\n",
     "\n",
     "sat_instance = [[(x1, True), (x2, True)],\n",
     "              [(x2, True), (x3, False), (x4, True)],\n",
     "              [(x3, True), (x5, False), (x6, False)]]\n",
     "\n",
     "# SAT HOBO\n",
-    "sat_model = alpha_sat * convert_to_penalty(sat_instance)\n",
+    "sat_model = convert_to_penalty(sat_instance)\n",
     "\n",
     "# Cost HOBO\n",
     "cost_model = 30*x1 + 20*x2 + 25*x3 + 50*x4 + 10*x5 + 10*x6\n",
     "\n",
     "# Combine models\n",
-    "combined_model = sat_model +  cost_model\n",
+    "combined_model = cost_model + alpha_sat * sat_model\n",
     "print(\"HOBO Combined Model:\")\n",
     "pprint(combined_model)\n",
     "print(\"Ising Combined Model: \")\n",
     "combined_hamiltonian = combined_model.to_puso()\n",
     "pprint(combined_hamiltonian)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# from configproblem.util.visualization import plot_beta_gamma_cost_landscape, plot_f_mu_cost_landscape\n",
-    "# Plot cost landscape for different values of beta and gamma\n",
+    "# # Plot cost landscape for different values of beta and gamma\n",
     "# hamiltonians = [{'hamiltonian': sat_model.to_puso(), 'name': 'SAT'},\n",
     "#                {'hamiltonian': cost_model.to_puso(), 'name': 'COST'},\n",
     "#                {'hamiltonian': combined_hamiltonian, 'name': 'COMBINED'}]\n",
     "# strategies = ['min', 'avg', 'top']\n",
     "# plot_beta_gamma_cost_landscape(problem_circuit, hamiltonians, strategies, 6, 0.2)\n",
     "#\n",
-    "# Plot cost landscape for different f and mu\n",
+    "# # Plot cost landscape for different f and mu\n",
     "# plot_f_mu_cost_landscape(combined_hamiltonian, 6)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -285,45 +277,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Visualize results using the StatevectorSimulator\n",
     "from qaoa_application import apply_qaoa_statevector\n",
     "import numpy as np\n",
     "\n",
-    "probabilities, _ = apply_qaoa_statevector(problem_circuit, hamiltonian, layers, n_features, theta, warmstart_statevector, use_optimizer, print_res=False)\n",
+    "probabilities, _ = apply_qaoa_statevector(problem_circuit, hamiltonian, layers, n_features, theta, warmstart_statevector, use_optimizer, print_res=True)\n",
     "probabilities_dict = {}\n",
     "for i in range(0, 2 ** n_features):\n",
     "    probabilities_dict[(np.binary_repr(i, width=6))] = round(probabilities[i], 4)\n",
     "\n",
     "plot_counts_histogram(probabilities_dict, best_config, valid_configs)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from configproblem.qaoa.qaoa_mincost_k_sat import exclude_config\n",
     "\n",
-    "list_length = 3\n",
+    "list_length = 5\n",
+    "debug_output = True\n",
     "\n",
+    "current_sat_instance = sat_instance\n",
+    "boolean_vars = [x1, x2, x3, x4, x5, x6]\n",
     "prioritized_list = []\n",
     "current_hamiltonian = hamiltonian\n",
     "for i in range(list_length):\n",
-    "    counts, _ = apply_qaoa(problem_circuit, current_hamiltonian, print_res=False)\n",
-    "    current_config = max(counts, key=counts.get)\n",
-    "    current_hamiltonian = exclude_config(current_hamiltonian, current_config, alpha_sat)\n",
+    "    probabilities, _ = apply_qaoa_statevector(problem_circuit, current_hamiltonian, print_res=False)\n",
+    "    probabilities_dict = {}\n",
+    "    for j in range(0, 2 ** n_features):\n",
+    "        probabilities_dict[(np.binary_repr(j, width=6))] = round(probabilities[j], 4)\n",
+    "\n",
+    "    current_config = max(probabilities_dict, key=probabilities_dict.get)\n",
+    "    current_sat_instance = exclude_config(current_sat_instance, boolean_vars, current_config)\n",
+    "    new_combined_model = cost_model + alpha_sat * convert_to_penalty(current_sat_instance)\n",
+    "\n",
+    "    if debug_output:\n",
+    "        print(\"Current hamiltonian: \" + str(current_hamiltonian))\n",
+    "        print(\"New combined model: \" + str(new_combined_model))\n",
+    "        plot_counts_histogram(probabilities_dict, best_config, valid_configs)\n",
+    "\n",
+    "    current_hamiltonian = new_combined_model.to_puso()\n",
     "    prioritized_list.append(current_config)\n",
     "\n",
     "print(prioritized_list)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   }
  ],
  "metadata": {
@@ -342,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
