Add max iterations option to optimization, change handling of strategy parameter

--- a/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
@@ -251,13 +251,14 @@
     "n_features = 6\n",
     "shots = 256\n",
     "theta = {\"beta\": 0.01, \"gamma\": -0.01} # start values for optimization\n",
+    "strategy = 'avg'\n",
     "use_warmstart = False\n",
     "use_optimizer = True\n",
     "\n",
     "if not use_warmstart:\n",
     "    warmstart_statevector = None\n",
     "\n",
-    "counts, qc = apply_qaoa(problem_circuit, hamiltonian, layers, n_features, shots, theta, warmstart_statevector, use_optimizer)"
+    "counts, qc = apply_qaoa(problem_circuit, hamiltonian, layers, n_features, shots, theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer)"
    ]
   },
   {
@@ -284,7 +285,7 @@
     "from qaoa_application import apply_qaoa_statevector\n",
     "import numpy as np\n",
     "\n",
-    "probabilities, _ = apply_qaoa_statevector(problem_circuit, hamiltonian, layers, n_features, theta, warmstart_statevector, use_optimizer, print_res=True)\n",
+    "probabilities, _ = apply_qaoa_statevector(problem_circuit, hamiltonian, layers, n_features, theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=True)\n",
     "probabilities_dict = {}\n",
     "for i in range(0, 2 ** n_features):\n",
     "    probabilities_dict[(np.binary_repr(i, width=6))] = round(probabilities[i], 4)\n",
@@ -308,7 +309,7 @@
     "prioritized_list = []\n",
     "current_hamiltonian = hamiltonian\n",
     "for i in range(list_length):\n",
-    "    probabilities, _ = apply_qaoa_statevector(problem_circuit, current_hamiltonian, print_res=False)\n",
+    "    probabilities, _ = apply_qaoa_statevector(problem_circuit, current_hamiltonian, strategy=strategy, print_res=False)\n",
     "    probabilities_dict = {}\n",
     "    for j in range(0, 2 ** n_features):\n",
     "        probabilities_dict[(np.binary_repr(j, width=6))] = round(probabilities[j], 4)\n",
@@ -319,8 +320,8 @@
     "\n",
     "    if debug_output:\n",
     "        print(\"Current hamiltonian: \" + str(current_hamiltonian))\n",
-    "        print(\"New combined model: \" + str(new_combined_model))\n",
     "        plot_counts_histogram(probabilities_dict, best_config, valid_configs)\n",
+    "        print(\"New combined model: \" + str(new_combined_model))\n",
     "\n",
     "    current_hamiltonian = new_combined_model.to_puso()\n",
     "    prioritized_list.append(current_config)\n",
