Add missing config to valid configurations

--- a/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
@@ -270,7 +270,7 @@
     "from configproblem.util.visualization import plot_counts_histogram\n",
     "\n",
     "best_config = \"000010\" # 654321\n",
-    "valid_configs = [\"111111\", \"011111\", \"101111\", \"001111\", \"110111\", \"010111\", \"100111\", \"000111\", \"011011\", \"101011\", \"001011\", \"010011\", \"100011\", \"000011\", \"111101\", \"011101\", \"101101\", \"001101\", \"011001\", \"101001\", \"001001\", \"010001\", \"100001\", \"000001\", \"111110\", \"011110\", \"101110\", \"001110\", \"110110\", \"010110\", \"100110\", \"000110\", \"011010\", \"101010\", \"010010\", \"100010\", \"000010\"]\n",
+    "valid_configs = [\"111111\", \"011111\", \"101111\", \"001111\", \"110111\", \"010111\", \"100111\", \"000111\", \"011011\", \"101011\", \"001011\", \"010011\", \"100011\", \"000011\", \"111101\", \"011101\", \"101101\", \"001101\", \"011001\", \"101001\", \"001001\", \"010001\", \"100001\", \"000001\", \"111110\", \"011110\", \"101110\", \"001110\", \"110110\", \"010110\", \"100110\", \"000110\", \"011010\", \"101010\", \"010100\", \"010010\", \"100010\", \"000010\"]\n",
     "\n",
     "plot_counts_histogram(counts, best_config, valid_configs)"
    ]
