--- a/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
@@ -122,7 +122,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "# R_{zzz} gate\n",
@@ -145,7 +147,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "# Hamiltonians may be described as a dict of tuples describing acting qubits and a value for each clause\n",
@@ -167,7 +171,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "from qaoa_mincost_k_sat import problem_circuit\n",
@@ -177,7 +183,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "example_qc_problem, _ = problem_circuit(sat_hamiltonian, 6)\n",
@@ -187,7 +195,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "# cost and sat individually\n",
@@ -204,6 +214,12 @@
     "sat_instance = [[(x1, True), (x2, True)],\n",
     "              [(x2, True), (x3, False), (x4, True)],\n",
     "              [(x3, True), (x5, False), (x6, False)]]\n",
+    "\n",
+    "sat_instance = [[(x1, True), (x2, True)],\n",
+    "                [(x3, False), (x4, False)],\n",
+    "                [(x3, True), (x4, True)],\n",
+    "                [(x5, False), (x6, True)],\n",
+    "                [(x1, True), (x3, True), (x5, False)]]\n",
     "\n",
     "# SAT HOBO\n",
     "sat_model = convert_to_penalty(sat_instance)\n",
@@ -223,49 +239,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
-    "# from configproblem.util.visualization import plot_beta_gamma_cost_landscape, plot_f_mu_cost_landscape\n",
-    "# # Plot cost landscape for different values of beta and gamma\n",
-    "# hamiltonians = [{'hamiltonian': sat_model.to_puso(), 'name': 'SAT'},\n",
-    "#                {'hamiltonian': cost_model.to_puso(), 'name': 'COST'},\n",
-    "#                {'hamiltonian': combined_hamiltonian, 'name': 'COMBINED'}]\n",
-    "# strategies = ['min', 'avg', 'top']\n",
-    "# plot_beta_gamma_cost_landscape(problem_circuit, hamiltonians, strategies, 6, 0.2)\n",
-    "#\n",
-    "# # Plot cost landscape for different f and mu\n",
-    "# plot_f_mu_cost_landscape(combined_hamiltonian, 6)"
+    "from configproblem.util.visualization import plot_beta_gamma_cost_landscape, plot_f_mu_cost_landscape\n",
+    "# Plot cost landscape for different values of beta and gamma\n",
+    "hamiltonians = [{'hamiltonian': sat_model.to_puso(), 'name': 'SAT'},\n",
+    "               {'hamiltonian': cost_model.to_puso(), 'name': 'COST'},\n",
+    "               {'hamiltonian': combined_hamiltonian, 'name': 'COMBINED'}]\n",
+    "strategies = ['min', 'avg', 'top']\n",
+    "plot_beta_gamma_cost_landscape(problem_circuit, hamiltonians, strategies, 6, 0.2)\n",
+    "\n",
+    "# Plot cost landscape for different f and mu\n",
+    "plot_f_mu_cost_landscape(combined_hamiltonian, 6)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "from qaoa_application import apply_qaoa\n",
     "from qaoa_mincost_k_sat import problem_circuit\n",
+    "from configproblem.util.hamiltonian_math import get_hamiltonian_dimension\n",
     "\n",
     "hamiltonian = combined_hamiltonian\n",
     "layers = 60 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
     "n_features = 6\n",
     "shots = 256\n",
     "theta = {\"beta\": 0.01, \"gamma\": -0.01} # start values for optimization\n",
-    "strategy = 'avg'\n",
+    "strategy = 'min'\n",
     "use_warmstart = False\n",
     "use_optimizer = True\n",
     "\n",
     "if not use_warmstart:\n",
     "    warmstart_statevector = None\n",
     "\n",
-    "counts, qc = apply_qaoa(problem_circuit, hamiltonian, layers, n_features, shots, theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer)"
+    "counts, qc = apply_qaoa(problem_circuit, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), shots, theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "from configproblem.util.visualization import plot_counts_histogram\n",
@@ -273,31 +296,69 @@
     "best_config = \"000010\" # 654321\n",
     "valid_configs = [\"111111\", \"011111\", \"101111\", \"001111\", \"110111\", \"010111\", \"100111\", \"000111\", \"011011\", \"101011\", \"001011\", \"010011\", \"100011\", \"000011\", \"111101\", \"011101\", \"101101\", \"001101\", \"011001\", \"101001\", \"001001\", \"010001\", \"100001\", \"000001\", \"111110\", \"011110\", \"101110\", \"001110\", \"110110\", \"010110\", \"100110\", \"000110\", \"011010\", \"101010\", \"001010\", \"010010\", \"100010\", \"000010\"]\n",
     "\n",
-    "plot_counts_histogram(counts, best_config, valid_configs)"
+    "plot_counts_histogram(counts, get_hamiltonian_dimension(hamiltonian), best_config, valid_configs)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "# Visualize results using the StatevectorSimulator\n",
     "from qaoa_application import apply_qaoa_statevector\n",
     "import numpy as np\n",
     "\n",
-    "probabilities, _ = apply_qaoa_statevector(problem_circuit, hamiltonian, layers, n_features, theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=True)\n",
+    "probabilities, _ = apply_qaoa_statevector(problem_circuit, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=True)\n",
     "probabilities_dict = {}\n",
-    "for i in range(0, 2 ** n_features):\n",
-    "    probabilities_dict[(np.binary_repr(i, width=6))] = round(probabilities[i], 4)\n",
+    "for i in range(0, 2 ** get_hamiltonian_dimension(hamiltonian)):\n",
+    "    probabilities_dict[(np.binary_repr(i, width=get_hamiltonian_dimension(hamiltonian)))] = round(probabilities[i], 4)\n",
     "\n",
-    "plot_counts_histogram(probabilities_dict, best_config, valid_configs)"
+    "plot_counts_histogram(probabilities_dict, get_hamiltonian_dimension(hamiltonian), best_config, valid_configs)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
+   "outputs": [],
+   "source": [
+    "# Visualize results using the StatevectorSimulator with quadratized hamiltonian\n",
+    "from qaoa_application import apply_qaoa_statevector\n",
+    "from qaoa_mincost_k_sat import convert_ancilla_bit_results\n",
+    "from qaoa_mincost_sat import problem_circuit as qubo_problem_circuit\n",
+    "import numpy as np\n",
+    "\n",
+    "hamiltonian = combined_model.to_quso()\n",
+    "\n",
+    "print(\"Quadratized Hamiltonian:\")\n",
+    "pprint(hamiltonian)\n",
+    "\n",
+    "probabilities, _ = apply_qaoa_statevector(qubo_problem_circuit, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=True)\n",
+    "probabilities_dict = {}\n",
+    "for i in range(0, 2 ** get_hamiltonian_dimension(hamiltonian)):\n",
+    "    probabilities_dict[np.binary_repr(i, width=get_hamiltonian_dimension(hamiltonian))] = probabilities[i]\n",
+    "\n",
+    "plot_counts_histogram(probabilities_dict, get_hamiltonian_dimension(hamiltonian), best_config, valid_configs)\n",
+    "\n",
+    "probabilities_dict = convert_ancilla_bit_results(probabilities_dict, n_features)\n",
+    "\n",
+    "for key in probabilities_dict:\n",
+    "    probabilities_dict[key] = round(probabilities_dict[key], 4)\n",
+    "\n",
+    "plot_counts_histogram(probabilities_dict, n_features, best_config, valid_configs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "from configproblem.qaoa.qaoa_mincost_k_sat import exclude_config\n",
@@ -308,12 +369,12 @@
     "current_sat_instance = sat_instance\n",
     "boolean_vars = [x1, x2, x3, x4, x5, x6]\n",
     "prioritized_list = []\n",
-    "current_hamiltonian = hamiltonian\n",
+    "current_hamiltonian = combined_model.to_puso()\n",
     "for i in range(list_length):\n",
     "    probabilities, _ = apply_qaoa_statevector(problem_circuit, current_hamiltonian, strategy=strategy, print_res=False)\n",
     "    probabilities_dict = {}\n",
-    "    for j in range(0, 2 ** n_features):\n",
-    "        probabilities_dict[(np.binary_repr(j, width=6))] = round(probabilities[j], 4)\n",
+    "    for j in range(0, 2 ** get_hamiltonian_dimension(current_hamiltonian)):\n",
+    "        probabilities_dict[(np.binary_repr(j, width=get_hamiltonian_dimension(current_hamiltonian)))] = round(probabilities[j], 4)\n",
     "\n",
     "    current_config = max(probabilities_dict, key=probabilities_dict.get)\n",
     "    current_sat_instance = exclude_config(current_sat_instance, boolean_vars, current_config)\n",
@@ -347,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
