--- a/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
@@ -8,9 +8,9 @@
     "\n",
     "Before looking at this notebook, you should understand the methods described in the qaoa_mincost_sat notebook, as we will consider those as given here.\n",
     "With the methods described in the qaoa_mincost_sat notebook, we are only able to solve 2-SAT problems, because we transform our SAT problem to a QUBO problem, which is limited to quadratic terms, and then implement the corresponding Ising model in a quantum circuit.\n",
-    "While there are methods for quadratization of Higher Order Binary Optimization (HOBO) problems, meaning a transformation to a QUBO problem, they introduce auxiliary variables and thus require additional qubits.\n",
+    "There are also methods for quadratization of Polynomial Unconstrained Binary Optimization (PUBO) problems, meaning a transformation to a QUBO problem, but they introduce auxiliary variables and thus require additional qubits. Nevertheless, we will also have a look at this method in this notebook.\n",
     "\n",
-    "The following describes, how to convert an arbitrary SAT problem to a HOBO problem and how to implement the corresponding problem circuit for applying QAOA, while using the same number of qubits as there are boolean variables in the SAT term and using a circuit depth that grows linear in the number of variables and degree of the SAT problem.\n",
+    "The following describes, how to convert an arbitrary SAT problem to a PUBO problem and how to implement the corresponding problem circuit for applying QAOA, while using the same number of qubits as there are boolean variables in the SAT term and using a circuit depth that grows linear in the number of variables and degree of the SAT problem.\n",
     "\n",
     "The system, we will use as an example in this notebook, is described by the following boolean formular:\n",
     "$\n",
@@ -33,45 +33,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Converting k-SAT to HOBO\n",
+    "## Converting k-SAT to PUBO\n",
     "\n",
-    "For clauses containing two variables, we can just use the quadratic penalties described by [Glover](https://arxiv.org/abs/1811.11538) we also used in the other notebook:\n",
+    "To get the penalties for general clauses $(x_i \\vee \\dots \\vee x_j \\vee \\neg x_k \\vee \\dots \\vee \\neg x_l)$, we can use the following term:\n",
     "\n",
-    "| Clause Type   | Example                          | Constraint                   | Penalty                       |\n",
-    "|---------------|----------------------------------|------------------------------|-------------------------------|\n",
-    "| No Negations  | $$(x_i \\vee x_j)$$               | $$x_i + x_j \\geq 1$$         | $$(1 - x_i - x_j + x_i x_j)$$ |\n",
-    "| One Negation  | $$(x_i \\vee \\lnot{}x_j)$$        | $$x_i + (1-x_j) \\geq 1$$     | $$(x_j - x_i x_j)$$           |\n",
-    "| Two Negations | $$(\\lnot{}x_i \\vee \\lnot{}x_j)$$ | $$(1-x_i) + (1-x_j) \\geq 1$$ | $$(x_i x_j)$$                 |\n",
+    "$$(1 - x_i) \\dots (1 - x_j) (x_k) \\dots (x_l)$$\n",
     "\n",
-    "For clauses containing $k \\ge 3$ variables, we can apply the penalties recursively.\n",
+    "If the clause consists of exactly two boolean variables, this is equivalent to the quadratic penalties described by [Glover](https://arxiv.org/abs/1811.11538) we used in the other notebook.\n",
     "\n",
-    "$$(x_i \\vee x_j \\vee x_k) = ((x_i \\vee x_j) \\vee x_k)$$\n",
-    "\n",
-    "We first apply the quadratic penalty to $(x_i \\vee x_j)$.\n",
-    "The resulting penalty can be seen as a new variable $x_{ij}$ that is 0 exactly when $(x_i \\vee x_j)$ is fulfilled and 1 otherwise, meaning $x_{ij} = \\neg(x_i \\vee x_j)$\n",
-    "Using that, we can define the boolean function as\n",
-    "\n",
-    "$$(x_i \\vee x_j \\vee x_k) = (x_k \\vee \\neg x_{ij})$$\n",
-    "\n",
-    "which we can again transform using the given quadratic penalties as follows:\n",
-    "\n",
-    "$$\n",
-    "(x_{ij} - x_k x_{ij})\\\\\n",
-    "= ((1 - x_i - x_j + x_i x_j) - x_k (1 - x_i - x_j + x_i x_j))\\\\\n",
-    "= (1 - x_i - x_j + x_i x_j - x_k + x_i x_k + x_j x_k - x_i x_j x_k)\\\\\n",
-    "= (1 - x_i - x_j - x_k + x_i x_j + x_i x_k + x_j x_k - x_i x_j x_k)\n",
-    "$$\n",
-    "\n",
-    "The same principle can be applied for clauses with negations or more variables.\n",
-    "\n",
-    "Using this method we can transform our example into the corresponding HOBO model.\n",
+    "Using this method we can transform our example into the corresponding PUBO model.\n",
     "\n",
     "$$\n",
     "min~y(x) = (1- x_1 - x_2 + x_1 x_2) + (x_3 - x_2 x_3 - x_3 x_4 + x_2 x_3 x_4) + (x_5 x_6 - x_3 x_5 x_6)\\\\\n",
     "= 1 - x_1 - x_2 + x_3 + x_1 x_2 - x_2 x_3 - x_3 x_4 + x_5 x_6 + x_2 x_3 x_4 - x_3 x_5 x_6\n",
     "$$\n",
     "\n",
-    "We can now transform this HOBO model into an Ising model\n",
+    "We can now transform this PUBO model into an Ising model\n",
     "\n",
     "$$\n",
     "min~y(x) = 1 - \\frac{1 -s_1}{2} - \\frac{1 - s_2}{2} + \\frac{1 - s_3}{2} + \\frac{1 - s_1}{2} \\frac{1 - s_2}{2} - \\frac{1 - s_2}{2} \\frac{1 - s_3}{2} - \\frac{1 - s_3}{2} \\frac{1 - s_4}{2} + \\frac{1 - s_5}{2} \\frac{1 - s_6}{2} + \\frac{1 - s_2}{2} \\frac{1 - s_3}{2} \\frac{1 - s_4}{2} - \\frac{1 - s_3}{2} \\frac{1 - s_5}{2} \\frac{1 - s_6}{2}\\\\\n",
@@ -82,7 +59,9 @@
     "\n",
     "$$\n",
     "H_C = 1 * I + \\sigma_1^z \\frac{1}{2} + \\sigma_2^z \\frac{1}{2} - \\sigma_3^z \\frac{1}{2} - \\sigma_1^z \\sigma_2^z \\frac{1}{4} + \\sigma_2^z \\sigma_3^z \\frac{1}{4} + \\sigma_3^z \\sigma_4^z \\frac{1}{4} - \\sigma_5^z \\sigma_6^z \\frac{1}{4} - \\sigma_2^z \\sigma_3^z \\sigma_4^z \\frac{1}{8} + \\sigma_3^z \\sigma_5^z \\sigma_6^z \\frac{1}{8}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "We can implement such a hamiltonian using the `qubovert` library."
    ]
   },
   {
@@ -221,15 +200,15 @@
     "                [(x5, False), (x6, True)],\n",
     "                [(x1, True), (x3, True), (x5, False)]]\n",
     "\n",
-    "# SAT HOBO\n",
+    "# SAT PUBO\n",
     "sat_model = convert_to_penalty(sat_instance)\n",
     "\n",
-    "# Cost HOBO\n",
+    "# Cost PUBO\n",
     "cost_model = 30*x1 + 20*x2 + 25*x3 + 50*x4 + 10*x5 + 10*x6\n",
     "\n",
     "# Combine models\n",
     "combined_model = cost_model + alpha_sat * sat_model\n",
-    "print(\"HOBO Combined Model:\")\n",
+    "print(\"PUBO Combined Model:\")\n",
     "pprint(combined_model)\n",
     "print(\"Ising Combined Model: \")\n",
     "combined_hamiltonian = combined_model.to_puso()\n",
@@ -320,6 +299,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Quadratization of PUBOs\n",
+    "\n",
+    "Instead of using the PUBO model directly, we can also quadratize the model and use the corresponding QUBO model.\n",
+    "For example, if we transform the clause $(x_i \\vee x_j \\vee x_k)$, we get the following penalty:\n",
+    "\n",
+    "$$1 - x_i - x_j - x_k + x_i x_j + x_i x_k + x_j x_k - x_i x_j x_k$$\n",
+    "\n",
+    "By introducing a new auxiliary variable $w_{ij} = x_i x_j$ we can rewrite the penalty as:\n",
+    "\n",
+    "$$1 - x_i - x_j - x_k + w_{ij} + x_i x_k + x_j x_k - w_{ij} x_k$$\n",
+    "\n",
+    "This term no longer contains a product of three variables but products of at most two variables and can therefore be used in a QUBO model.\n",
+    "\n",
+    "We use the `to_quso()` function from the `qubovert` library to quadratize the PUBO model.\n",
+    "After applying QAOA to the resulting QUBO model, we can use the `convert_ancilla_bit_results()` function to convert the results back to the original PUBO model."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -343,8 +345,6 @@
     "for i in range(0, 2 ** get_hamiltonian_dimension(hamiltonian)):\n",
     "    probabilities_dict[np.binary_repr(i, width=get_hamiltonian_dimension(hamiltonian))] = probabilities[i]\n",
     "\n",
-    "plot_counts_histogram(probabilities_dict, get_hamiltonian_dimension(hamiltonian), best_config, valid_configs)\n",
-    "\n",
     "probabilities_dict = convert_ancilla_bit_results(probabilities_dict, n_features)\n",
     "\n",
     "for key in probabilities_dict:\n",
@@ -352,6 +352,24 @@
     "\n",
     "plot_counts_histogram(probabilities_dict, n_features, best_config, valid_configs)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Configuration Prioritization using PUBO models\n",
+    "\n",
+    "If we have an arbitrary SAT instance, we can use QAOA to find the most likely configuration. We can then exclude the configuration we found from the SAT instance by adding the following clause:\n",
+    "\n",
+    "$$x_i \\vee \\dots \\vee x_j \\vee \\neg x_k \\vee \\dots \\vee \\neg x_l$$\n",
+    "\n",
+    "Where $x_i$ to $x_j$ are the variables that have the value $0$ for the found configuration and $x_k$ to $x_l$ are the variables that have the value $1$ for the found configuration.\n",
+    "\n",
+    "We can then run QAOA again with this new SAT instance to find the next most likely configuration.\n",
+    "We can repeat this process until we have found a certain number of configurations, thus creating a prioritized list of configurations."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
