Clean up code and notebook

--- a/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
@@ -44,7 +44,7 @@
     "Using this method we can transform our example into the corresponding PUBO model.\n",
     "\n",
     "$$\n",
-    "min~y(x) = (1- x_1 - x_2 + x_1 x_2) + (x_3 - x_2 x_3 - x_3 x_4 + x_2 x_3 x_4) + (x_5 x_6 - x_3 x_5 x_6)\\\\\n",
+    "min~y(x) = (1 - x_1)(1 - x_2) + (1 - x_2)(x_3)(1 - x_4) + (1 - x_3)(x_5)(x_6)\\\\\n",
     "= 1 - x_1 - x_2 + x_3 + x_1 x_2 - x_2 x_3 - x_3 x_4 + x_5 x_6 + x_2 x_3 x_4 - x_3 x_5 x_6\n",
     "$$\n",
     "\n",
@@ -182,7 +182,6 @@
     "# cost and sat individually\n",
     "from configproblem.util.model_transformation import convert_to_penalty\n",
     "from qubovert import boolean_var\n",
-    "import qubovert.sat as sat\n",
     "\n",
     "# define binary vars\n",
     "x1, x2, x3, x4, x5, x6 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6')\n",
@@ -193,12 +192,6 @@
     "sat_instance = [[(x1, True), (x2, True)],\n",
     "              [(x2, True), (x3, False), (x4, True)],\n",
     "              [(x3, True), (x5, False), (x6, False)]]\n",
-    "\n",
-    "sat_instance = [[(x1, True), (x2, True)],\n",
-    "                [(x3, False), (x4, False)],\n",
-    "                [(x3, True), (x4, True)],\n",
-    "                [(x5, False), (x6, True)],\n",
-    "                [(x1, True), (x3, True), (x5, False)]]\n",
     "\n",
     "# SAT PUBO\n",
     "sat_model = convert_to_penalty(sat_instance)\n",
@@ -308,7 +301,7 @@
     "\n",
     "$$1 - x_i - x_j - x_k + x_i x_j + x_i x_k + x_j x_k - x_i x_j x_k$$\n",
     "\n",
-    "By introducing a new auxiliary variable $w_{ij} = x_i x_j$ we can rewrite the penalty as:\n",
+    "By introducing a new auxiliary variable $w_{ij} = x_i x_j$ we can rewrite this penalty as:\n",
     "\n",
     "$$1 - x_i - x_j - x_k + w_{ij} + x_i x_k + x_j x_k - w_{ij} x_k$$\n",
     "\n",
@@ -397,6 +390,7 @@
     "    current_config = max(probabilities_dict, key=probabilities_dict.get)\n",
     "    current_sat_instance = exclude_config(current_sat_instance, boolean_vars, current_config)\n",
     "    new_combined_model = cost_model + alpha_sat * convert_to_penalty(current_sat_instance)\n",
+    "    valid_configs.remove(current_config)\n",
     "\n",
     "    if debug_output:\n",
     "        print(\"Current hamiltonian: \" + str(current_hamiltonian))\n",
