Add missing parameter to plot_counts_histogram() call in config prio cell

--- a/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
@@ -101,9 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "is_executing": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# R_{zzz} gate\n",
@@ -126,9 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "is_executing": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Hamiltonians may be described as a dict of tuples describing acting qubits and a value for each clause\n",
@@ -150,9 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "is_executing": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from qaoa_mincost_k_sat import problem_circuit\n",
@@ -162,9 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "is_executing": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "example_qc_problem, _ = problem_circuit(sat_hamiltonian, 6)\n",
@@ -174,9 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "is_executing": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# cost and sat individually\n",
@@ -211,9 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "is_executing": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from configproblem.util.visualization import plot_beta_gamma_cost_landscape, plot_f_mu_cost_landscape\n",
@@ -231,9 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "is_executing": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from qaoa_application import apply_qaoa\n",
@@ -258,9 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "is_executing": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from configproblem.util.visualization import plot_counts_histogram\n",
@@ -274,9 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "is_executing": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Visualize results using the StatevectorSimulator\n",
@@ -317,9 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "is_executing": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Visualize results using the StatevectorSimulator with quadratized hamiltonian\n",
@@ -367,9 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "is_executing": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from configproblem.qaoa.qaoa_mincost_k_sat import exclude_config\n",
@@ -390,13 +368,13 @@
     "    current_config = max(probabilities_dict, key=probabilities_dict.get)\n",
     "    current_sat_instance = exclude_config(current_sat_instance, boolean_vars, current_config)\n",
     "    new_combined_model = cost_model + alpha_sat * convert_to_penalty(current_sat_instance)\n",
-    "    valid_configs.remove(current_config)\n",
     "\n",
     "    if debug_output:\n",
     "        print(\"Current hamiltonian: \" + str(current_hamiltonian))\n",
-    "        plot_counts_histogram(probabilities_dict, best_config, valid_configs)\n",
+    "        plot_counts_histogram(probabilities_dict, get_hamiltonian_dimension(current_hamiltonian), best_config, valid_configs)\n",
     "        print(\"New combined model: \" + str(new_combined_model))\n",
     "\n",
+    "    valid_configs.remove(current_config)\n",
     "    current_hamiltonian = new_combined_model.to_puso()\n",
     "    prioritized_list.append(current_config)\n",
     "\n",
