Refactor ProblemInstance class

--- a/configproblem/qaoa/qaoa_instance_evaluation.ipynb
+++ b/configproblem/qaoa/qaoa_instance_evaluation.ipynb
@@ -23,24 +23,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# define binary vars needed for problem instances\n",
+    "x1, x2, x3, x4, x5, x6 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6')\n",
+    "\n",
+    "\n",
+    "# define set of problem instances to evaluate\n",
+    "problem_instances = [ProblemInstance([[(x1, True), (x2, True)],\n",
+    "                                      [(x2, True), (x3, False), (x4, True)],\n",
+    "                                      [(x3, True), (x5, False), (x6, False)]],\n",
+    "                                     [x1, x2, x3, x4, x5, x6],\n",
+    "                                     [30, 20, 25, 50, 10, 10],\n",
+    "                                     1000)]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# define binary vars\n",
-    "x1, x2, x3, x4, x5, x6 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6')\n",
-    "\n",
-    "problem_instances = [ProblemInstance([[(x1, True), (x2, True)],\n",
-    "                                      [(x2, True), (x3, False), (x4, True)],\n",
-    "                                      [(x3, True), (x5, False), (x6, False)]],\n",
-    "                                     [x1, x2, x3, x4, x5, x6],\n",
-    "                                     [30, 20, 25, 50, 10, 10])]\n",
-    "alpha_sat = 1000\n",
-    "\n",
     "# qaoa application config\n",
     "layers = 60 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
-    "n_features = 6\n",
     "theta = {\"beta\": 0.01, \"gamma\": -0.01} # start values for optimization\n",
     "strategy = 'min'\n",
     "use_warmstart = False\n",
@@ -57,7 +67,7 @@
     "# print hamiltonians\n",
     "for index, instance in enumerate(problem_instances):\n",
     "    print(f\"Instance {index}:\")\n",
-    "    pprint(instance.get_puso_combined_hamiltonian(alpha_sat))"
+    "    pprint(instance.get_puso_combined_hamiltonian())"
    ],
    "metadata": {
     "collapsed": false
@@ -82,7 +92,7 @@
     "# plot PUBO results\n",
     "for index, instance in enumerate(problem_instances):\n",
     "    print(f\"Instance {index}:\")\n",
-    "    hamiltonian = instance.get_puso_combined_hamiltonian(alpha_sat)\n",
+    "    hamiltonian = instance.get_puso_combined_hamiltonian()\n",
     "\n",
     "    probabilities, _ = apply_qaoa_statevector(puso_problem_circuit, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=print_res)\n",
     "    probabilities_dict = {}\n",
@@ -103,19 +113,19 @@
     "# plot quadratized QUBO results\n",
     "for index, instance in enumerate(problem_instances):\n",
     "    print(f\"Instance {index}:\")\n",
-    "    hamiltonian = instance.get_quso_combined_hamiltonian(alpha_sat)\n",
+    "    hamiltonian = instance.get_quso_combined_hamiltonian()\n",
     "\n",
     "    probabilities, _ = apply_qaoa_statevector(quso_problem_circuit, hamiltonian, layers, get_hamiltonian_dimension(hamiltonian), theta, warmstart_statevector, strategy=strategy, use_optimizer=use_optimizer, print_res=print_res)\n",
     "    probabilities_dict = {}\n",
     "    for i in range(0, 2 ** get_hamiltonian_dimension(hamiltonian)):\n",
     "        probabilities_dict[np.binary_repr(i, width=get_hamiltonian_dimension(hamiltonian))] = probabilities[i]\n",
     "\n",
-    "    probabilities_dict = convert_ancilla_bit_results(probabilities_dict, n_features)\n",
+    "    probabilities_dict = convert_ancilla_bit_results(probabilities_dict, instance.get_num_features())\n",
     "\n",
     "    for key in probabilities_dict:\n",
     "        probabilities_dict[key] = round(probabilities_dict[key], 4)\n",
     "\n",
-    "    plot_counts_histogram(probabilities_dict, n_features, instance.get_best_config(), instance.get_valid_configs())"
+    "    plot_counts_histogram(probabilities_dict, instance.get_num_features(), instance.get_best_config(), instance.get_valid_configs())"
    ],
    "metadata": {
     "collapsed": false
