Add cell for plotting cost landscape

--- a/configproblem/qaoa/qaoa_instance_evaluation.ipynb
+++ b/configproblem/qaoa/qaoa_instance_evaluation.ipynb
@@ -10,7 +10,7 @@
     "from qaoa_mincost_k_sat import problem_circuit as puso_problem_circuit, convert_ancilla_bit_results\n",
     "from qaoa_mincost_sat import problem_circuit as quso_problem_circuit\n",
     "from configproblem.util.hamiltonian_math import get_hamiltonian_dimension\n",
-    "from configproblem.util.visualization import plot_counts_histogram\n",
+    "from configproblem.util.visualization import plot_counts_histogram, plot_beta_gamma_cost_landscape, plot_f_mu_cost_landscape\n",
     "from configproblem.util.problem_instance import ProblemInstance\n",
     "from pprint import pprint\n",
     "import numpy as np\n",
@@ -49,6 +49,9 @@
    },
    "outputs": [],
    "source": [
+    "# cost landscape config\n",
+    "beta_gamma_step_size = 0.1\n",
+    "\n",
     "# qaoa application config\n",
     "layers = 60 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
     "theta = {\"beta\": 0.01, \"gamma\": -0.01} # start values for optimization\n",
@@ -78,7 +81,15 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# plot cost landscape"
+    "# plot cost landscape\n",
+    "for index, instance in enumerate(problem_instances):\n",
+    "    print(f\"Instance {index}:\")\n",
+    "    hamiltonians = [{'hamiltonian': instance.get_puso_sat_hamiltonian(), 'name': 'SAT'},\n",
+    "                    {'hamiltonian': instance.get_cost_hamiltonian(), 'name': 'COST'},\n",
+    "                    {'hamiltonian': instance.get_puso_combined_hamiltonian(), 'name': 'COMBINED'}]\n",
+    "    strategies = ['min', 'avg', 'top']\n",
+    "    plot_beta_gamma_cost_landscape(quso_problem_circuit, hamiltonians, strategies, instance.get_num_features(), beta_gamma_step_size)\n",
+    "    plot_f_mu_cost_landscape(instance.get_puso_combined_hamiltonian(), instance.get_num_features())"
    ],
    "metadata": {
     "collapsed": false
