Fix division by zero error, Add random instances for evaluation

--- a/configproblem/qaoa/qaoa_instance_evaluation.ipynb
+++ b/configproblem/qaoa/qaoa_instance_evaluation.ipynb
@@ -14,7 +14,7 @@
     "from qaoa_mincost_sat import problem_circuit as quso_problem_circuit\n",
     "from configproblem.util.hamiltonian_math import get_hamiltonian_dimension\n",
     "from configproblem.util.visualization import plot_counts_histogram, plot_beta_gamma_cost_landscape, plot_f_mu_cost_landscape\n",
-    "from configproblem.util.problem_instance import ProblemInstance\n",
+    "from configproblem.util.problem_instance import ProblemInstance, generate_problem_instance, set_seed\n",
     "from pprint import pprint\n",
     "import numpy as np\n",
     "from qubovert import boolean_var"
@@ -58,6 +58,15 @@
    "source": [
     "# define binary vars needed for problem instances\n",
     "x1, x2, x3, x4, x5, x6, x7, x8, x9, x10 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6'), boolean_var('x7'), boolean_var('x8'), boolean_var('x9'), boolean_var('x10')\n",
+    "\n",
+    "set_seed(42)\n",
+    "\n",
+    "# generate set of random problem instances to evaluate\n",
+    "problem_instances = []\n",
+    "for i in range(2, 7):\n",
+    "    for j in range(2, 5):\n",
+    "        for k in range(1, 6):\n",
+    "            problem_instances.append(generate_problem_instance(6, i, i, j, j, 1, 1, 1000))\n",
     "\n",
     "\n",
     "# define set of problem instances to evaluate\n",
@@ -192,6 +201,8 @@
     "if run_puso_qaoa:\n",
     "    result_quality_list = []\n",
     "    for index, instance in enumerate(problem_instances):\n",
+    "        if len(instance.get_valid_configs()) == 0:\n",
+    "            continue\n",
     "        # determine result quality\n",
     "        probabilities = probabilities_list[index]\n",
     "        probabilities_dict = {}\n",
@@ -254,6 +265,8 @@
     "if run_quso_qaoa:\n",
     "    result_quality_list = []\n",
     "    for index, instance in enumerate(problem_instances):\n",
+    "        if len(instance.get_valid_configs()) == 0:\n",
+    "            continue\n",
     "        # determine result quality\n",
     "        probabilities_dict = probabilities_dict_list[index]\n",
     "        result_quality = 0\n",
