Improve result quality print

--- a/configproblem/qaoa/qaoa_instance_evaluation.ipynb
+++ b/configproblem/qaoa/qaoa_instance_evaluation.ipynb
@@ -64,72 +64,71 @@
     "# generate set of random problem instances to evaluate\n",
     "problem_instances = []\n",
     "for i in range(2, 7):\n",
-    "    for j in range(2, 5):\n",
-    "        for k in range(1, 6):\n",
-    "            problem_instances.append(generate_problem_instance(6, i, i, j, j, 1, 1, 1000))\n",
+    "        for j in range(1, 6):\n",
+    "            problem_instances.append(generate_problem_instance(6, i, i, 3, 3, 1, 1, 1000))\n",
     "\n",
     "\n",
     "# define set of problem instances to evaluate\n",
-    "problem_instances = [ProblemInstance([[(x1, True), (x2, True)],\n",
-    "                                      [(x2, True), (x3, False), (x4, True)],\n",
-    "                                      [(x3, True), (x5, False), (x6, False)]],\n",
-    "                                     [x1, x2, x3, x4, x5, x6],\n",
-    "                                     [10, 10, 10, 10, 10, 10],\n",
-    "                                     1000),\n",
-    "                     # more variables\n",
-    "                     ProblemInstance([[(x1, True), (x2, True), (x7, False)],\n",
-    "                                      [(x2, True), (x3, False), (x4, True), (x8, False)],\n",
-    "                                      [(x3, True), (x5, False), (x6, False), (x9, True)]],\n",
-    "                                     [x1, x2, x3, x4, x5, x6, x7, x8, x9],\n",
-    "                                     [10, 10, 10, 10, 10, 10, 10, 10, 10],\n",
-    "                                     1000),\n",
-    "                     # more literals per clause\n",
-    "                     ProblemInstance([[(x1, True), (x2, True), (x3, False)],\n",
-    "                                      [(x2, True), (x3, False), (x4, True), (x5, True)],\n",
-    "                                      [(x3, True), (x5, False), (x6, False), (x7, False)]],\n",
-    "                                     [x1, x2, x3, x4, x5, x6, x7],\n",
-    "                                     [10, 10, 10, 10, 10, 10, 10],\n",
-    "                                     1000),\n",
-    "                     # more variables and move literals per clause\n",
-    "                     ProblemInstance([[(x1, True), (x2, True), (x7, False)],\n",
-    "                                      [(x2, True), (x3, False), (x4, True), (x8, False)],\n",
-    "                                      [(x3, True), (x5, False), (x6, False), (x9, True), (x10, False)]],\n",
-    "                                     [x1, x2, x3, x4, x5, x6, x7, x8, x9, x10],\n",
-    "                                     [10, 10, 10, 10, 10, 10, 10, 10, 10, 10],\n",
-    "                                     1000),\n",
-    "                     # less clauses\n",
-    "                     ProblemInstance([[(x1, True), (x2, True)],\n",
-    "                                      [(x2, True), (x3, False), (x4, True)]],\n",
-    "                                     [x1, x2, x3, x4],\n",
-    "                                     [10, 10, 10, 10],\n",
-    "                                     1000),\n",
-    "                     ProblemInstance([[(x1, True), (x2, True)],\n",
-    "                                      [(x3, True), (x5, False), (x6, False)]],\n",
-    "                                     [x1, x2, x3, x4, x5, x6],\n",
-    "                                     [10, 10, 10, 10, 10, 10],\n",
-    "                                     1000),\n",
-    "                     ProblemInstance([[(x2, True), (x3, False), (x4, True)],\n",
-    "                                      [(x3, True), (x5, False), (x6, False)]],\n",
-    "                                     [x1, x2, x3, x4, x5, x6],\n",
-    "                                     [10, 10, 10, 10, 10, 10],\n",
-    "                                     1000),\n",
-    "                     # more clauses\n",
-    "                     ProblemInstance([[(x1, True), (x2, True)],\n",
-    "                                      [(x2, True), (x3, False), (x4, True)],\n",
-    "                                      [(x3, True), (x5, False), (x6, False)],\n",
-    "                                      [(x4, True), (x6, True)]],\n",
-    "                                     [x1, x2, x3, x4, x5, x6],\n",
-    "                                     [10, 10, 10, 10, 10, 10],\n",
-    "                                     1000),\n",
-    "                     # even more clauses\n",
-    "                     ProblemInstance([[(x1, True), (x2, True)],\n",
-    "                                      [(x2, True), (x3, False), (x4, True)],\n",
-    "                                      [(x3, True), (x5, False), (x6, False)],\n",
-    "                                      [(x4, True), (x6, True)],\n",
-    "                                      [(x1, False), (x4, False), (x5, True)]],\n",
-    "                                     [x1, x2, x3, x4, x5, x6],\n",
-    "                                     [10, 10, 10, 10, 10, 10],\n",
-    "                                     1000)]"
+    "# problem_instances = [ProblemInstance([[(x1, True), (x2, True)],\n",
+    "#                                       [(x2, True), (x3, False), (x4, True)],\n",
+    "#                                       [(x3, True), (x5, False), (x6, False)]],\n",
+    "#                                      [x1, x2, x3, x4, x5, x6],\n",
+    "#                                      [10, 10, 10, 10, 10, 10],\n",
+    "#                                      1000),\n",
+    "#                      # more variables\n",
+    "#                      ProblemInstance([[(x1, True), (x2, True), (x7, False)],\n",
+    "#                                       [(x2, True), (x3, False), (x4, True), (x8, False)],\n",
+    "#                                       [(x3, True), (x5, False), (x6, False), (x9, True)]],\n",
+    "#                                      [x1, x2, x3, x4, x5, x6, x7, x8, x9],\n",
+    "#                                      [10, 10, 10, 10, 10, 10, 10, 10, 10],\n",
+    "#                                      1000),\n",
+    "#                      # more literals per clause\n",
+    "#                      ProblemInstance([[(x1, True), (x2, True), (x3, False)],\n",
+    "#                                       [(x2, True), (x3, False), (x4, True), (x5, True)],\n",
+    "#                                       [(x3, True), (x5, False), (x6, False), (x7, False)]],\n",
+    "#                                      [x1, x2, x3, x4, x5, x6, x7],\n",
+    "#                                      [10, 10, 10, 10, 10, 10, 10],\n",
+    "#                                      1000),\n",
+    "#                      # more variables and move literals per clause\n",
+    "#                      ProblemInstance([[(x1, True), (x2, True), (x7, False)],\n",
+    "#                                       [(x2, True), (x3, False), (x4, True), (x8, False)],\n",
+    "#                                       [(x3, True), (x5, False), (x6, False), (x9, True), (x10, False)]],\n",
+    "#                                      [x1, x2, x3, x4, x5, x6, x7, x8, x9, x10],\n",
+    "#                                      [10, 10, 10, 10, 10, 10, 10, 10, 10, 10],\n",
+    "#                                      1000),\n",
+    "#                      # less clauses\n",
+    "#                      ProblemInstance([[(x1, True), (x2, True)],\n",
+    "#                                       [(x2, True), (x3, False), (x4, True)]],\n",
+    "#                                      [x1, x2, x3, x4],\n",
+    "#                                      [10, 10, 10, 10],\n",
+    "#                                      1000),\n",
+    "#                      ProblemInstance([[(x1, True), (x2, True)],\n",
+    "#                                       [(x3, True), (x5, False), (x6, False)]],\n",
+    "#                                      [x1, x2, x3, x4, x5, x6],\n",
+    "#                                      [10, 10, 10, 10, 10, 10],\n",
+    "#                                      1000),\n",
+    "#                      ProblemInstance([[(x2, True), (x3, False), (x4, True)],\n",
+    "#                                       [(x3, True), (x5, False), (x6, False)]],\n",
+    "#                                      [x1, x2, x3, x4, x5, x6],\n",
+    "#                                      [10, 10, 10, 10, 10, 10],\n",
+    "#                                      1000),\n",
+    "#                      # more clauses\n",
+    "#                      ProblemInstance([[(x1, True), (x2, True)],\n",
+    "#                                       [(x2, True), (x3, False), (x4, True)],\n",
+    "#                                       [(x3, True), (x5, False), (x6, False)],\n",
+    "#                                       [(x4, True), (x6, True)]],\n",
+    "#                                      [x1, x2, x3, x4, x5, x6],\n",
+    "#                                      [10, 10, 10, 10, 10, 10],\n",
+    "#                                      1000),\n",
+    "#                      # even more clauses\n",
+    "#                      ProblemInstance([[(x1, True), (x2, True)],\n",
+    "#                                       [(x2, True), (x3, False), (x4, True)],\n",
+    "#                                       [(x3, True), (x5, False), (x6, False)],\n",
+    "#                                       [(x4, True), (x6, True)],\n",
+    "#                                       [(x1, False), (x4, False), (x5, True)]],\n",
+    "#                                      [x1, x2, x3, x4, x5, x6],\n",
+    "#                                      [10, 10, 10, 10, 10, 10],\n",
+    "#                                      1000)]"
    ]
   },
   {
@@ -223,7 +222,7 @@
     "    for index, instance in enumerate(sorted_problem_instances):\n",
     "        print(f\"Instance {sorted_indices[index]}:\")\n",
     "        print(str(instance))\n",
-    "        print(f\"Result quality: {result_quality_list[sorted_indices[index]]}\")"
+    "        print(f\"Result quality: {result_quality_list[sorted_indices[index]]}\\n\")"
    ]
   },
   {
