Add growing_num_literals and growing_num_clauses_and_literals generation types

--- a/configproblem/qaoa/qaoa_instance_evaluation.ipynb
+++ b/configproblem/qaoa/qaoa_instance_evaluation.ipynb
@@ -41,16 +41,16 @@
     "max_feature_cost = 0\n",
     "alpha_sat = 1000\n",
     "seed = 42\n",
-    "generation_type = 'alpha_sat' # 'random', 'growing_num_clauses', 'append_clauses' or 'alpha_sat'\n",
-    "# instance used as starting point for generation type 'alpha_sat'\n",
+    "generation_type = 'alpha_sat' # 'random', 'growing_num_clauses', 'growing_num_literals', 'growing_num_clauses_and_literals, 'append_clauses' or 'alpha_sat'\n",
+    "# instance used as starting point for generation type 'alpha_sat', set to None to use randomly generated instance\n",
     "x1, x2, x3, x4, x5, x6 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6')\n",
     "start_instance = ProblemInstance([[(x1, True), (x2, True)],\n",
     "                                  [(x3, False), (x4, False)],\n",
     "                                  [(x3, True), (x4, True)],\n",
     "                                  [(x5, False), (x6, True)]],\n",
     "                                 [x1, x2, x3, x4, x5, x6],\n",
-    "                                 [30, 20, 25, 50, 10, 10],\n",
-    "                                 1000)\n",
+    "                                 [100, 100, 100, 100, 100, 10],\n",
+    "                                 alpha_sat=1000)\n",
     "\n",
     "\n",
     "# run config\n",
