Add some sources to qaoa_mincost_k_sat notebook

--- a/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
+++ b/configproblem/qaoa/qaoa_mincost_k_sat.ipynb
@@ -95,7 +95,7 @@
     "### Phase-separating operator\n",
     "Like in the other notebook, the phase-separating operator $U(C,\\gamma)$ encodes $C$ and can be derived from a cost Hamiltonian $H_{Ctot}$ in Ising-form.\n",
     "Unlike in the other notebook, there is now the possibility of having terms of degree higher than 2 in the cost function, for which we need to implement the corresponding $R_{z ... z}$ gates.\n",
-    "We do this by decomposing the $R_{z ... z}$ gate into multiple CNOT gates and a single $R_z$ gate.\n"
+    "We do this by decomposing the $R_{z ... z}$ gate into multiple CNOT gates and a single $R_z$ gate as illustrated by [Glos et al](https://arxiv.org/pdf/2009.07309.pdf).\n"
    ]
   },
   {
@@ -288,6 +288,7 @@
     "$$1 - x_i - x_j - x_k + w_{ij} + x_i x_k + x_j x_k - w_{ij} x_k$$\n",
     "\n",
     "This term no longer contains a product of three variables but products of at most two variables and can therefore be used in a QUBO model.\n",
+    "The method for reduction by substitution above was first described by I. G. Rosenberg in \"Reduction of Bivalent Maximization to the Quadratic Case\" (1975) and can be found in a collection of different quadratization methods by [Dattani](https://arxiv.org/pdf/1901.04405.pdf).\n",
     "\n",
     "We use the `to_quso()` function from the `qubovert` library to quadratize the PUBO model.\n",
     "After applying QAOA to the resulting QUBO model, we can use the `convert_ancilla_bit_results()` function to convert the results back to the original PUBO model."
